<?xml version="1.0"?>
<package>
  <name>whycon</name>
  <version>1.2.0</version>
  <description>
    WhyCon localization system
  </description>
  <author email="mnitsche@dc.uba.ar">Matias Nitsche</author>
  <maintainer email="mnitsche@dc.uba.ar">Matias Nitsche</maintainer>
  <url type="repository">https://github.com/lrse/whycon</url>
  <url type="bugtracker">https://github.com/lrse/whycon</url>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nodelet</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nodelet</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>

 <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
